--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^4.2.7",
     "fluent-ffmpeg": "^2.1.2",
+    "https": "^1.0.0",
     "ytdl-core": "^4.4.4"
   },
   "devDependencies": {},
