--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "@discordjs/opus": "^0.3.3",
     "discord.js": "^12.5.1",
-    "ffmpeg": "^0.0.4",
+    "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.2.7",
     "fluent-ffmpeg": "^2.1.2",
-    "ytdl-core": "^4.4.4"
+    "youtube-mp3-downloader": "^0.7.6",
+    "ytdl": "^1.4.1",
+    "ytdl-core": "^4.4.5"
   },
   "devDependencies": {},
   "scripts": {
