--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "discord.js": "^12.5.1",
     "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.2.7",
-    "youtube-mp3-downloader": "^0.7.6",
+    "https": "^1.0.0",
+    "youtube-mp3-downloader": "^0.7.6"
   },
   "devDependencies": {},
   "scripts": {
